--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.9'
 services:
   web:
     build: .
@@ -9,3 +8,4 @@ services:
     environment:
       - FLASK_ENV=development
       - FLASK_APP=app.py
+    command: flask run --host=0.0.0.0 --port=5000 --reload
